# EPIC

./: .gitignore  CMakeLists.txt  README.md
Orchestrator/: .gitignore  README.md  orchestrator.bat  orchestrator.sh  paths.local.json.example  render_particle_video.py  timing_heuristics.json
Orchestrator/outputs/baseline/confined/20260627-210503/: manifest.json  preset.json
Orchestrator/outputs/baseline/confined/20260627-210503/runs/APIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/confined/20260627-210503/runs/FLIP_095/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/confined/20260627-210503/runs/PIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/confined/20260627-210503/runs/POLYPIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/dam/20260627-214726/: manifest.json  preset.json
Orchestrator/outputs/baseline/dam/20260627-214726/runs/APIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/dam/20260627-214726/runs/FLIP_095/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/dam/20260627-214726/runs/PIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/dam/20260627-214726/runs/POLYPIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/baseline/settling/20260627-213114/: manifest.json  preset.json
Orchestrator/outputs/baseline/taylor/20260627-202308/: manifest.json  preset.json
Orchestrator/outputs/compressed_square/20260629-045225/: manifest.json  preset.json
Orchestrator/outputs/compressed_square/20260629-045225/runs/APIC/: diagnostics.csv  run.json
Orchestrator/outputs/compressed_square/20260629-045225/runs/FLIP_095/: diagnostics.csv  run.json
Orchestrator/outputs/compressed_square/20260629-045225/runs/PIC/: diagnostics.csv  run.json
Orchestrator/outputs/compressed_square/20260629-045225/runs/POLYPIC/: diagnostics.csv  run.json
Orchestrator/outputs/dam_3d/20260628-223300/: manifest.json  preset.json
Orchestrator/outputs/dam_3d/20260628-223300/runs/APIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/dam_3d/20260628-223300/runs/FLIP_095/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/dam_3d/20260628-223300/runs/PIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/dam_3d/20260628-223300/runs/POLYPIC/: diagnostics.csv  notes.txt  profile.txt  run.json
Orchestrator/outputs/sweeps/cfl_settling_dx_05_dt005/20260629-171218/: manifest.json  preset.json
Orchestrator/outputs/sweeps/cfl_settling_dx_05_dt005/20260629-171551/: manifest.json  preset.json
Orchestrator/outputs/sweeps/cfl_settling_dx_2_dt02/20260629-171145/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_dx_0.5/20260629-035007/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_dx_2/20260629-034848/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_sweep_dt_0025/20260628-185233/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_sweep_dt_005/20260628-193633/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_sweep_dt_02/20260628-195919/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_sweep_dt_04/20260628-202218/: manifest.json  preset.json
Orchestrator/outputs/sweeps/settling_sweep_flip/20260628-202342/: manifest.json  preset.json
Orchestrator/presets/: 3d_dam_break.json  compressed_hyperelastic_square.json  confined_vortex.json  dam_break.json  final_experiment.json  ringing_instability_metric.json  settling_pool.json  smoke_test.json  taylor_green.json
Orchestrator/src/: config_schema.py  diagnostics_derived.py  diagnostics_loader.py  diagnostics_plotter.py  diagnostics_viewer.py  json_editor.py  orchestrator.py  paths.py  render_results.py  run_experiment.py  timing.py
include/glad/: glad.h
libs/: glfw3.lib
res/shaders/: box.fs  box.vs  floor.fs  floor.vs  particle.fs  particle.vs  particle_mesh.fs  sky.fs  sky.vs  sprite.fs  sprite.vs
src/: .clang-format  camera.hh  defines.hh  dev_ui.cc  dev_ui.hh  diagnostics.cc  diagnostics.hh  game.cc  game.hh  game_state.hh  main.cc  particle_frame_export.cc  particle_frame_export.hh  particle_mesher.cc  particle_mesher.hh  player_controller.hh  profile_timer.hh  renderer.cc  renderer.hh  resource_handler.cc  resource_handler.hh  shader_program.cc  shader_program.hh  texture_2d.cc  texture_2d.hh  window.cc  window.hh  world.cc  world.hh
src/ecs/: box_component.hh  collision_component.hh  component_array.hh  ecs_common.hh  packed_array.hh  particle_component.hh  physics_component.hh  sprite_component.hh  transform_component.hh
src/glad/: glad.c
src/headless/: fluid_profile.cc  mpm_polypic_experiment.cc  particle_frame_renderer.cc
src/simulation/: fluid_solver.cc  fluid_solver.hh  fluid_solver_3d.cc  fluid_solver_3d.hh  mpm.cc  mpm.hh
src/simulation/core/: grid.hh  helpers.cc  helpers.hh  mac_grid.cc  mac_grid.hh  mac_grid_3d.cc  mac_grid_3d.hh  simulation.hh  timestep_controller.cc  timestep_controller.hh
src/simulation/fluid_kernels/: add_confined_vortex.cc  add_confined_vortex.hh  add_taylor_green_vortex.cc  add_taylor_green_vortex.hh  add_water_box.cc  add_water_box.hh  advect.cc  advect.hh  advect_3d.cc  advect_3d.hh  angular_momentum.cc  angular_momentum.hh  apply_forces.cc  apply_forces.hh  enforce_boundary.cc  enforce_boundary.hh  enforce_boundary_3d.cc  enforce_boundary_3d.hh  extrapolate_velocity.cc  extrapolate_velocity.hh  extrapolate_velocity_3d.cc  extrapolate_velocity_3d.hh  grid_to_particle.cc  grid_to_particle.hh  grid_to_particle_3d.cc  grid_to_particle_3d.hh  helpers_3d.cc  helpers_3d.hh  particle_to_grid.cc  particle_to_grid.hh  particle_to_grid_3d.cc  particle_to_grid_3d.hh  polypic.cc  polypic.hh  projection.cc  projection.hh  projection_3d.cc  projection_3d.hh
src/simulation/mpm_kernels/: collocated_grid.cc  collocated_grid.hh
(+196 files in other folders)
